[package]
name = "rcommunity"
version = "0.1.0"
edition = "2018"
authors = ["Yu Yin <yxonic@gmail.com>"]

[[bin]]
name = "rcommunity-server"
path = "src/bin/server.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "2", optional = true }
cuid = "1"
env_logger = { version = "0.9", optional = true }
log = "0.4"
redis = { version = "0.21", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
warp = { version = "0.3", optional = true }

[features]
default = ["cli"]
cli = ["anyhow", "clap", "env_logger", "tokio", "warp"]
