[package]
name = "rcommunity"
version = "0.0.2"
authors = ["Yu Yin <yxonic@gmail.com>"]
description = "Subsystem for building a community on top of existing business"
license = "MIT"
edition = "2018"

[dependencies]
cuid = "1"
log = "0.4"
redis = { version = "0.21", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

rcommunity_core = { path = "../rcommunity_core", version = "0.0.1" }
rcommunity_macros = { path = "../rcommunity_macros", version = "0.0.1" }
