[package]
name = "rcommunity_core"
version = "0.0.1"
authors = ["Yu Yin <yxonic@gmail.com>"]
description = "Core utilities for crate `rcommunity`"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
parking_lot = "0.12.1"
thiserror = "1.0.31"
tracing = "0.1.34"

[dev-dependencies]
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
