[package]
name = "rcommunity_core"
version = "0.0.3"
authors = ["Yu Yin <yxonic@gmail.com>"]
description = "Core facilities for crate `rcommunity`"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
byteorder = "1.4.3"
parking_lot = "0.12.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
