[package]
name = "rcommunity_core"
version = "0.0.3"
authors = ["Yu Yin <yxonic@gmail.com>"]
description = "Core facilities for crate `rcommunity`"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
byteorder = "1.4.3"
parking_lot = "0.12.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.34"
tracing = "0.1.36"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
